--- a/Makefile.am
+++ b/Makefile.am
@@ -50,6 +50,18 @@ tsdb_SRC := \
 	src/core/Tags.java	\
 	src/core/TsdbQuery.java	\
 	src/core/WritableDataPoints.java	\
+	src/expression/ArithmeticExpressionCalculator.java	\
+	src/expression/ArithmeticExpressionResultDataPoint.java	\
+	src/expression/ArithmeticExpressionResultDataPoints.java	\
+	src/expression/ArithmeticNode.java	\
+	src/expression/MetricArithmeticExpressionLexer.java	\
+	src/expression/MetricArithmeticExpressionParser.java	\
+	src/expression/MetricArithmeticExpressionTreeWalker.java	\
+	src/expression/MetricFormulaException.java	\
+	src/expression/MetricNode.java	\
+	src/expression/Operator.java	\
+	src/expression/OperatorNode.java	\
+	src/expression/TimestampValue.java	\
 	src/graph/Plot.java	\
 	src/stats/Histogram.java	\
 	src/stats/StatsCollector.java	\
@@ -81,6 +93,7 @@ tsdb_SRC := \
 	src/uid/UniqueIdInterface.java
 
 tsdb_DEPS = \
+	$(ANTLR)	\
 	$(ASYNCHBASE)	\
 	$(GUAVA)	\
 	$(JCL_OVER_SLF4J)	\
